--- a/webapp/templates/webapp/home.html
+++ b/webapp/templates/webapp/home.html
@@ -41,8 +41,8 @@
                     <h3><a href="{% url 'webapp:post_detail' post.pk %}">{{ post.title|truncatewords:5 }}</a></h3>
                     <p>{{ post.description.html|striptags | truncatewords:10}}</p>
                     <p>{{ post.location }}</p>
-                    {% if post.memory_date %}
-                        <p>{{ post.memory_date }}
+                    {% if post.date %}
+                        <p>{{ post.date }}
                         {% if post.include_time %}
                             at {{ post.time }}
                         {% endif %}</p>
@@ -95,8 +95,8 @@
                     <h3><a href="{% url 'webapp:post_detail' post.pk %}">{{ post.title|truncatewords:5 }}</a></h3>
                     <p>{{ post.description.html|striptags | truncatewords:10}}</p>
                     <p>{{ post.location }}</p>
-                    {% if post.memory_date %}
-                        <p>{{ post.memory_date }}
+                    {% if post.date %}
+                        <p>{{ post.date }}
                         {% if post.include_time %}
                             at {{ post.time }}
                         {% endif %}</p>
